fixed style wrapImage > 1fr

--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -170,7 +170,7 @@
         width: 100%;
     }
 
-    .wrap {
+    .imageWrap {
         grid-template-columns: 1fr;
     }
 
